<resources>
    <string name="app_name">Shop Smart</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="action_save">Save</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="signed_out">signing out</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Administration</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_satellite">Satellite</string>
    <string name="action_normal">Normal</string>
    <string name="action_none">None</string>
    <string name="action_terrain">Terrain</string>
    <string name="action_hybrid">Hybrid</string>
    <string name="google_maps_key">AIzaSyCKagsqgcEPHtvl1SJYcgZpz3BxJbePR6Q</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="auth_failed">Failed to login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="title_activity_sample">Sample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_map">Shop Smart Map</string>
    <string name="about_us">About shop smart\n\n
        Shop smart is a shopping guide application that helps you to view specials and sales from different shops across South Africa.\n\n
        It comes with special features that will benefits you as a user, you can be able to look for nearest shopping centres around your current location.\n\n
        Designed and developed by doctorlloyd9@gmail.com
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="refresh">Refresh</string>
    <string name="nearest_shopping_centre">Nearest Shopping Centre</string>
    <string name="about_us_tab">About Us</string>
    <string name="settings">Settings</string>
    <string name="shopping_centres">Shopping Centres</string>
    <string name="location">Location</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_logo">Shop logo</string>
    <string name="now_32_00">now 32.00</string>
    <string name="save_32">save 32</string>
    <string name="shopname">ShopName</string>
    <string name="item_name">Item name</string>
    <string name="duration">Duration</string>
    <string name="shopsmart_mail_com">shopsmart@mail.com</string>
    <string name="welcome">welcome</string>
    <string name="we_are_here_to_make_your_shopping_simple">..we are here to make your shopping simple..</string>
    <string name="shop_smart_has_arrived">shop smart has arrived!</string>
    <string name="Share_with">Share with friends</string>
    <string name="gallery">Gallery</string>
</resources>
