<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_refresh"
            android:icon="@drawable/quantum_ic_refresh_white_24"
            android:title="@string/refresh" />
        <item
            android:id="@+id/nav_shop_centre"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nearest_shopping_centre" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@mipmap/logo"
            android:title="@string/about_us_tab" />
        <item
            android:id="@+id/nav_manage_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

</menu>
