<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:theme="@style/AppTheme"
    android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            style="@style/Widget.Design.CollapsingToolbar"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/displayItemIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:elevation="16dp"
                android:layout_margin="2dp"
                android:src="@drawable/smarthealth2"
                android:contentDescription="@string/shop_logo" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="#F44336"
                android:background="@drawable/my_buttons"
                android:elevation="24dp"
                android:layout_gravity="bottom|end"
                android:textSize="36sp"
                android:text="@string/now_32_00" />

            <TextView
                android:id="@+id/itemPriceOff"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:elevation="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text"
                android:text="@string/save_32"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayShopName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/shopname"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/displayItemName"
                android:layout_width="wrap_content"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/displaySpecialDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/displayItemSpecification"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/large_text" />


        </LinearLayout>
    </LinearLayout>