<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="16dp"
    android:layout_margin="10dp"
    android:orientation="vertical">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:elevation="16dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview_Shop"
        android:src="@drawable/smarthealth2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shop_logo" />

    <TextView
        android:id="@+id/tv_ShopName"
        android:text="@string/shop_name"
        android:textSize="32sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_Location"
        android:text="@string/location"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</android.support.v7.widget.CardView>