<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/itemIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_margin="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/images"
                android:contentDescription="@string/shop_logo">

            </ImageView>
            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/price_color"
                android:gravity="center"
                android:textSize="32sp"
                android:text="@string/now_32_00" />
        </FrameLayout>

        <TextView
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_name"
            android:textAllCaps="true"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/itemSpecification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_text" />
    </LinearLayout>
</android.support.v7.widget.CardView>